# src/models/getinsightspolymarketupdownhourlyop.ts
@@ -21,7 +21,7 @@ export const GetInsightsPolymarketUpDownHourlyRequest$zodSchema: z.ZodType<
 > = z.object({
   asset: z.string().describe("Symbol of the asset: BTC, ETH, SOL").optional(),
   days: z.int().describe(
-    "Number of days to aggregate for the meta-leaderboard (default is 14). See 'Leaderboard - Latest Meta-Leaderboard'.",
+    "Number of days to aggregate for the meta-leaderboard (default is 14 if horizon=24h, 6 if horizon=1h). See 'Leaderboard - Latest Meta-Leaderboard'.",
   ).optional(),
   horizon: z.string().describe(
     "Forecast horizon: 1h for next-hour or 24h for next-day price intervals (default: 1h)",
